--- a/sweet_pants/nginx/nginx.conf
+++ b/sweet_pants/nginx/nginx.conf
@@ -3,7 +3,7 @@ upstream sweet_pants {
 }
 
 server {
-	listen 30;
+	listen 80;
 	client_max_body_size 400M;
     
     location / {
@@ -13,11 +13,13 @@ server {
         proxy_redirect off;
     }
 
-    location /static/ {
+    location /ecommerce/static/ {
     	alias /opt/project/staticfiles/;
+        try_files $uri $uri/ =404;
     }
     
-    location /media/ {
+    location /ecommerce/media/ {
         alias /opt/project/mediafiles/;
+        try_files $uri $uri/ =404;
     }
 }
